md2map/versions/v0.3.0/spec.md
# md2map 仕様書

## 1. 概要

md2map は、大規模なマークダウンファイルを意味的な単位（セクション・見出し）に分割し、AI による文書レビューや解析を支援するための「意味的マップ」を生成する CLI ツールである。

### 1.1 背景と目的

大規模なマークダウンファイル（数千行規模の技術文書・仕様書・マニュアル等）を AI でレビューする際、以下の課題が存在する：

- **コンテキスト制限**: AI モデルには入力トークン数の制限があり、巨大な文書全体を一度に処理できない
- **構造把握の困難**: 長大な文書では全体構造の把握が困難で、レビュー精度が低下する
- **参照の非効率性**: 特定のセクションを参照する際、ファイル全体を読み直す必要がある

md2map はこれらの課題を解決するため、以下を提供する：

1. **構造化された索引（INDEX.md）**: 文書全体の見取り図として機能し、セクション間の関係性を把握可能にする
2. **分割された文書片（parts/）**: 個別のセクションを独立したファイルとして抽出し、焦点を絞ったレビューを可能にする
3. **機械可読な対応表（MAP.json）**: ツール連携や差分検知のための構造化データを提供する

### 1.2 設計思想

- **レビュー指向**: 分割された文書片は再結合を目的としない。読みやすさと参照性を最優先とする
- **見出しセクション分割**: マークダウンの見出し階層（`#`〜`######`）に基づきセクションを基本分割する
- **多段階セクション分割**: 見出しセクション分割に加え、NLP（形態素解析）や AI（LLM）による意味的な再分割をサポートする。見出しのない長大なセクションでも適切な粒度で分割する
- **サブスプリット**: NLP/AI モードで生成されるサブセクションは「サブスプリット（subsplit）」として扱い、元文書の見出し構造を変更せずに分割粒度を細分化する
- **ヒューリスティック許容**: 相互参照や関連セクションの検出は完全な正確性を保証しないが、実用的な情報を提供する
- **段階的拡張**: MVP（Minimum Viable Product）として単一ファイル解析から開始し、将来的にディレクトリ・プロジェクト単位の解析に拡張する

### 1.3 本ツールの対象外

md2map は「編集のための再構成」ではなく、**レビュー・解析のための再構成**を目的とする。以下の機能は明示的に対象外とする。

| 対象外機能 | 理由 |
|-----------|------|
| 分割後の文書を再結合可能にする | 編集・マージ機能を持たせると複雑性が増し、本来の目的（可読性向上）から逸脱する |
| リンクの補正・解決 | 分割片内のリンク（内部アンカー `#heading`、相対パス等）は元のまま保持する。リンク先の解決は MAP.json を参照して行う設計とする |
| フォーマッタや Linter の代替 | 既存ツール（Prettier、markdownlint 等）の領域であり、重複を避ける |
| 生成物を「正しい目次」にする | 目次は人間が別途用意するものであり、自動生成される索引はあくまで参照用 |

---

## 2. 機能要件

### 2.1 入力仕様

| 項目 | 仕様 |
|------|------|
| 対象ファイル | 単一のマークダウンファイル |
| 対応形式 | CommonMark 準拠のマークダウン（`.md`）|
| エンコーディング | UTF-8（BOM なし）を前提 |
| 想定サイズ | 数百行から数千行（500 行以上の大規模文書を想定） |

**スコープ制限（MVP）**:
- 単一ファイルのみを対象とする
- ディレクトリ単位・複数ファイル一括処理は将来拡張として扱う

### 2.2 出力仕様

ツールは指定された出力ディレクトリに以下の 3 種類の成果物を生成する。

#### 2.2.1 INDEX.md

人間および AI 向けの索引ファイル。Markdown 形式で記述される。

**ファイル構造**:

| 構成要素 | 必須/任意 | 説明 |
|---------|----------|------|
| ファイルヘッダ | 必須 | `# Index: <ファイル名>` 形式の見出し |
| 警告セクション | 任意 | パースエラー等がある場合のみ `[WARNING]` として記載 |
| 構造ツリー | 必須 | 見出し階層をインデントで表現したツリー構造 |
| セクション一覧 | 必須 | 各セクションの詳細情報 |

**各セクションの記載項目**:

| 項目 | 説明 |
|------|------|
| セクション名 | 見出しテキスト |
| 見出しレベル | H1〜H6（`#`の数） |
| 行範囲 | 開始行と終了行（`L開始–L終了` 形式） |
| 分割ファイルリンク | parts/ 内の対応ファイルへの相対パス |
| summary | セクション冒頭の要約（最初の段落または最初の 100 文字） |
| keywords | セクション内で検出されたキーワード・用語 |
| references | セクション内のリンク・参照一覧 |

**summary / keywords / references は情報が存在する場合のみ記載し、空の場合は省略する。**

#### 2.2.2 parts/ ディレクトリ

分割されたマークダウン片を格納するディレクトリ。

**ファイル命名規則**:

| 見出しレベル | 命名パターン |
|-------------|-------------|
| H1 | `<セクション名>.md` |
| H2 | `<親H1名>_<セクション名>.md` |
| H3 以下 | `<親H1名>_<親H2名>_<セクション名>.md` |

**名前の正規化**:
- スペースはアンダースコア（`_`）に置換
- 特殊文字（`/`、`\`、`:`、`*`、`?`、`"`、`<`、`>`、`|`）は削除
- 日本語・英数字はそのまま保持
- 同名セクションが存在する場合、連番（`_1`、`_2`）を付与

**各ファイルのヘッダ**:

ファイル先頭にメタデータを HTML コメント形式で付与する。

| ヘッダ項目 | 説明 |
|-----------|------|
| fragment 宣言 | `md2map fragment` - 分割片である旨の明示 |
| id | セクションの一意識別子（`{prefix}{連番}` 形式、例: `MD1`, `MD2`） |
| original | 元ファイル名（パスではなくファイル名のみ） |
| lines | 開始行-終了行の範囲 |
| section | セクションの表示名（仮想の場合は仮想見出し） |
| level | 見出しレベル（1〜6） |
| is_subsplit | サブスプリット（再分割）由来かどうか（サブスプリット時のみ記載） |
| note | 備考・分割の由来（サブスプリットの場合のみ） |
| subsplit_title | サブスプリットタイトル（サブスプリットの場合のみ） |

ヘッダの後に空行を挟み、元のマークダウン内容を配置する。

**ID の形式**:
- プレフィックス（デフォルト: `MD`）+ 連番（1から開始）
- 連番は元ファイルでの出現順に付与
- プレフィックスは `--id-prefix` オプションで変更可能

#### 2.2.3 MAP.json

機械可読な対応表。JSON 配列形式で記述される。

**各エントリのフィールド**:

| フィールド | 型 | 説明 |
|-----------|------|------|
| id | string | セクションの一意識別子（`{prefix}{連番}` 形式、例: `MD1`, `MD2`） |
| section | string | セクションの表示名（仮想の場合は仮想見出し） |
| level | integer | 見出しレベル（1〜6） |
| path | string | 階層パス（`親セクション > 子セクション` 形式） |
| original_file | string | 元ファイル名（パスではなくファイル名のみ） |
| original_start_line | integer | 開始行番号（1-based） |
| original_end_line | integer | 終了行番号（inclusive） |
| word_count | integer | セクション内の単語数（日本語は文字数） |
| part_file | string | 分割ファイルの相対パス（`parts/` プレフィックス付き） |
| checksum | string | SHA-256 チェックサム（16進数64文字、小文字） |
| is_subsplit | boolean | サブスプリット（再分割）由来かどうか（サブスプリットの場合のみ） |
| note | string | 備考・分割の由来（サブスプリットの場合のみ） |
| subsplit_title | string | サブスプリットタイトル（サブスプリットの場合のみ） |

**id フィールドの用途**:
- 外部ツール連携時のセクション参照に使用
- AI による構造マッチング時の確実なマッピングに利用
- 短く一意な識別子のため、LLM が正確に返却しやすい

**checksum の算出対象**:
- 分割ファイル全体（ヘッダコメントを含む）の内容を SHA-256 でハッシュ化

**配列の順序**:
- エントリは元ファイルでの出現順（開始行番号の昇順）で格納する

### 2.3 CLI 仕様

#### 2.3.1 コマンド構文

```
md2map build <input_file> [OPTIONS]
```

#### 2.3.2 引数・オプション

| 引数/オプション | 必須 | デフォルト | 説明 |
|----------------|------|-----------|------|
| `input_file` | 必須 | - | 解析対象のマークダウンファイルパス |
| `--out <DIR>` | 任意 | `./md2map-out` | 出力ディレクトリパス |
| `--max-depth <N>` | 任意 | 3 | 分割対象とする最大の見出し深さ（1〜6、H1〜H{N}を分割） |
| `--id-prefix <PREFIX>` | 任意 | `MD` | セクションIDのプレフィックス（例: `MD` → `MD1`, `MD2`, ...） |
| `--verbose` | 任意 | false | 詳細ログ出力の有効化 |
| `--dry-run` | 任意 | false | ファイル書き込みを行わずプレビューのみ |
| `--split-mode <MODE>` / `-m` | 任意 | `heading` | 分割モード（`heading`/`nlp`/`ai`） |
| `--split-threshold <N>` | 任意 | 500 | 再分割対象の最小文字数（日本語）/単語数（英語） |
| `--max-subsections <N>` | 任意 | 5 | 1セクションから生成する仮想見出しの最大数 |
| `--ai-provider <PROVIDER>` | 任意 | `bedrock` | AI プロバイダー（`openai`/`anthropic`/`bedrock`） |
| `--ai-model <MODEL>` | 任意 | プロバイダー既定 | AI モデルID（未指定時はプロバイダーごとのデフォルト） |
| `--ai-region <REGION>` | 任意 | `ap-northeast-1` | Bedrock 用リージョン（未指定時は環境変数 `AWS_REGION` またはデフォルト） |
| `--ai-prompt-extra-notes <TEXT>` | 任意 | なし | AI サブスプリットのシステムプロンプト注意事項パートに追記するテキスト |

#### 2.3.3 終了コード

| コード | 意味 |
|--------|------|
| 0 | 正常終了（警告なし） |
| 1 | 致命的エラー（ファイル不在、パース失敗等） |
| 2 | 部分成功（警告ありだが出力は生成） |

#### 2.3.4 `--dry-run` 時の出力

ファイル書き込みを行わず、以下を標準出力に表示する：
- 検出したセクション一覧（見出し名、レベル、行範囲）
- 生成予定のファイル一覧

警告がある場合は標準エラー出力に出力する。

#### 2.3.5 出力ディレクトリの動作

| 状況 | 動作 |
|------|------|
| 出力ディレクトリが存在しない | 自動作成する |
| 出力ディレクトリが既に存在 | 既存ファイルを上書きする |
| parts/ サブディレクトリ | 同様に上書き動作 |

**注意**: md2map が生成しないファイル（ユーザーが手動配置したファイル等）は削除しない。

#### 2.3.6 分割モード

3 つの分割モードを提供する。`heading` モードはデフォルトで追加依存なし。`nlp`・`ai` モードは見出しベース分割後に、閾値を超えるセクションの自身コンテンツ範囲を再分割し「サブスプリット」を挿入する。

| モード | 概要 | 再分割の境界決定方法 |
|--------|------|---------------------|
| `heading` | 見出し階層のみで分割 | なし（再分割しない） |
| `nlp` | 形態素解析で意味的境界を検出 | 隣接段落間の名詞 Jaccard 類似度が低い箇所 |
| `ai` | LLM に行番号付きテキストを送信し分割位置の決定を委任 | LLM が返す行範囲グループ |

**再分割の条件**:
- セクションの自身コンテンツ範囲（見出し行の次〜最初の子セクション開始行の前行。末端セクションの場合はセクション終了行まで）の文字数（日本語）/単語数（英語）が `--split-threshold` 以上
- NLP モード: 自身コンテンツ範囲内に 2 つ以上の段落が存在する
- AI モード: 自身コンテンツ範囲が 2 行以上である

**サブスプリットの生成**:
- サブスプリットセクションは元セクションのレベル + 1（最大 6）で生成される
- NLP モード・AI モードともに `<元セクション名>: part-N` 形式のタイトルが付与される

**NLP モードの前提**:
- `sudachipy` および `sudachidict-core` が必要

**AI モードの前提**:
- `--ai-provider` で指定したプロバイダーに応じた認証情報が必要

| プロバイダー | 必要な環境変数 | デフォルトモデル |
|-------------|---------------|-----------------|
| `openai` | `OPENAI_API_KEY`（必須） | `gpt-4o-mini` |
| `anthropic` | `ANTHROPIC_API_KEY`（必須） | `claude-haiku-4-5-20251001` |
| `bedrock` | AWS 認証情報（IAM ロールまたは `AWS_ACCESS_KEY_ID` / `AWS_SECRET_ACCESS_KEY`） | `global.anthropic.claude-haiku-4-5-20251001-v1:0` |

- モデルIDは `--ai-model` オプションまたは `MD2MAP_AI_MODEL` 環境変数で上書き可能
- OpenAI プロバイダーは `OPENAI_MODEL` 環境変数でも指定可能
- Bedrock のリージョンは `--ai-region` オプションまたは `AWS_REGION` 環境変数で指定（デフォルト: `ap-northeast-1`）

---

## 3. 処理フロー

### 3.1 全体フロー

```
入力ファイル受付
    ↓
マークダウンパース
    ↓
見出し抽出 → セクションリスト + 警告
    ↓
[split-mode != heading?] → Yes → セクション再分割（仮想見出し挿入）
    ↓
セクション情報抽出（要約・キーワード・リンク・単語数）
    ↓
セクションID割り当て
    ↓
[dry-run?] → Yes → プレビュー出力して終了
    ↓ No
出力ディレクトリ作成
    ↓
parts/ 生成（文書片ファイル作成）
    ↓
INDEX.md 生成（索引ファイル作成）
    ↓
MAP.json 生成（対応表作成）
    ↓
終了（終了コード設定）
```

### 3.2 セクション抽出フェーズ

パーサーはマークダウンを解析し、見出し階層に基づいてセクションを抽出する。

**抽出対象**:
- 見出し（`#` 〜 `######`）で区切られるセクション
- ATX 形式（`#` 記法）のみ対応（Setext 形式は非対応）
- `--max-depth` で指定した深さまでの見出しを分割対象とする

**セクション境界の決定**:
- 開始行: 見出し行
- 終了行: 次の同レベル以上の見出しの前行、またはファイル末尾

**セクションの基本属性**:

| 情報 | 説明 |
|------|------|
| 見出しテキスト | 見出しの内容 |
| 見出しレベル | 1〜6（`#` の数） |
| 行範囲 | 開始行・終了行（1-based、inclusive） |
| 親セクション | 上位の見出し |
| 階層パス | 親からの完全パス（例：`概要 > 背景`） |

**セクション情報抽出**（再分割後に全セクションに対して実行）:

| 情報 | 説明 |
|------|------|
| 要約 | 最初の段落または最初の 100 文字 |
| リンク | セクション内の `[text](url)` 形式のリンク |
| キーワード | 太字（`**text**`）で囲まれたテキスト |
| 単語数 | 日本語は文字数、英語は単語数 |

### 3.3 セクション再分割フェーズ（NLP/AI モード、サブスプリット）

`--split-mode` が `nlp` または `ai` の場合、見出しベースで抽出されたセクションのうち、再分割条件を満たすものに対してサブスプリットを挿入する。

**再分割の全体手順**:

1. 各セクションについて自身コンテンツ範囲を算出する
   - 末端セクション: 見出し行の次〜セクション終了行
   - 子セクションを持つ場合: 見出し行の次〜最初の子セクション開始行の前行
2. 自身コンテンツ範囲の文字数が閾値以上かを判定
3. 目標分割数を算出: `min(max_subsections, max(2, 文字数 / 閾値))`
4. 分割モードに応じた境界決定を実行
5. サブスプリットセクションを元セクションの直下（子セクションの前）に挿入し、階層関係を再構築

**NLP モードの境界決定**:
- 自身コンテンツ範囲を空行区切りで段落に分割する（段落数 2 未満の場合はスキップ）
- Sudachi（形態素解析）で各段落から名詞を抽出
- 隣接する段落間の名詞集合の Jaccard 類似度を算出
- 類似度が低い（意味的に変化が大きい）箇所を境界として選択
- 境界が得られない場合は閾値ベースの均等分割にフォールバック

**AI モードの境界決定**:
- 自身コンテンツ範囲のテキストに行番号を付与して LLM に送信（行数 2 未満の場合はスキップ）
- LLM は行範囲グループを JSON 配列で返却
- レスポンスの妥当性を検証（全行のカバー・連続性・非重複）
- LLM 応答が不正または API エラーの場合は行数ベースの均等分割にフォールバック

**フォールバック分割**:
- NLP モード: 目標分割数に基づき段落あたりの目標文字数を算出し、段落を順に積み上げてチャンクを切り出す
- AI モード: 目標分割数に基づき行数を均等に分割する

### 3.4 文書片生成フェーズ

セクションごとに以下の処理を行う：

1. **ファイル名決定**: 命名規則に従いファイル名を生成、衝突時は連番付与
2. **内容抽出**: 元ファイルから該当行範囲を抽出
3. **ヘッダ生成**: メタデータを HTML コメント形式で作成
4. **ファイル書き出し**: ヘッダ + 内容を結合して出力

### 3.5 索引生成フェーズ

セクションリストを基に INDEX.md を生成する。

**構造ツリーの生成**:
- 見出しレベルに応じたインデントで階層構造を表現
- 各セクションへの parts/ リンクを付与
- サブスプリットセクションには `[SubSplit]` ラベルを付与

### 3.6 対応表生成フェーズ

セクションリストと生成済み parts/ ファイルの情報を基に MAP.json を生成する。

**チェックサム計算**:
- 各分割ファイルの内容全体を SHA-256 でハッシュ化
- 変更検知やキャッシュ管理に利用可能

---

## 4. マークダウン解析詳細

### 4.1 解析基盤

**推奨ライブラリ**: `markdown-it-py` または Python 標準の正規表現ベース解析

### 4.2 対応構文

| 構文要素 | 対応状況 |
|---------|---------|
| ATX 見出し（`#` 記法） | 対応 |
| Setext 見出し（`===`/`---`） | 非対応（MVP） |
| リンク（`[text](url)`） | 検出・記録（補正は行わない） |
| 画像（`![alt](url)`） | 検出・記録（補正は行わない） |
| コードブロック（`` ``` ``） | 認識（内部は解析しない） |
| インラインコード（`` ` ``） | 認識 |
| 太字（`**text**`） | キーワード抽出対象 |
| リスト | 認識（セクション分割には影響しない） |
| テーブル | 認識（セクション分割には影響しない） |

### 4.3 セクション境界の決定

セクションは以下の規則で境界を決定する：

1. **開始行**: 見出し行（`#` で始まる行）
2. **終了行**: 次の同レベル以上の見出しの前行、またはファイル末尾

**コードブロック内の見出し様テキスト**:
- コードブロック内の `#` は見出しとして認識しない
- コードブロックの開始・終了を追跡して判定

### 4.4 制限事項

- HTML コメント内の見出しは認識する（コメントアウトされた見出しも分割対象となる可能性）
- フロントマター（YAML ヘッダ）は無視する
- 複数行の見出し（Setext 形式）は非対応

---

## 5. NLP モード詳細

`--split-mode nlp` で有効になる、形態素解析ベースのセクション再分割の仕様を定義する。

### 5.1 依存パッケージ

| パッケージ | 用途 |
|-----------|------|
| `sudachipy` (>= 0.6) | 日本語形態素解析エンジン |
| `sudachidict-core` (>= 20230927) | Sudachi 用辞書 |

パッケージが未インストールの場合、パーサー初期化時に `RuntimeError` を発生させる。

### 5.2 境界決定アルゴリズム

1. 対象セクションの本文（見出し行を除く）を空行区切りで段落に分割する
2. Sudachi で各段落をトークナイズし、品詞が「名詞」であるトークンの表層形を集合として抽出する
3. 隣接する段落ペア (i, i+1) について、名詞集合の Jaccard 類似度を算出する
   - 両方空集合の場合: 類似度 = 1.0（分割しない）
   - 片方のみ空集合の場合: 類似度 = 0.0（分割候補）
   - それ以外: `|A ∩ B| / |A ∪ B|`
4. 類似度の低い順にソートし、上位 `目標分割数 - 1` 個を境界として選択する
5. 境界が得られない場合は閾値ベースの均等分割にフォールバックする

### 5.3 サブスプリットの命名

NLP モードでは LLM を使用しないため、サブスプリットタイトルは以下の形式で自動生成する：

```
<元セクション名>: part-N
```

- `N`: サブスプリットセクションの順番（1始まり）

### 5.4 制限事項

- 名詞抽出は Sudachi の品詞判定に依存するため、英語のみの文書では有効な境界を検出できない場合がある
- 段落が極端に短い場合（名詞がほとんど含まれない場合）、類似度の算出精度が低下する
- 空行を含まない巨大テーブル等は 1 段落として扱われ、段落数 2 未満のため再分割の対象にならない。テーブルを含むセクションの意味的分割が必要な場合は AI モード（`--split-mode ai`）の利用を推奨する

---

## 6. AI モード詳細

`--split-mode ai` で有効になる、LLM ベースのセクション再分割の仕様を定義する。

### 6.1 LLM プロバイダー抽象化

AI モードは複数の LLM プロバイダーに対応する。プロバイダーは共通インターフェース `BaseLLMProvider` を実装し、`send_message(system_prompt, user_message) -> str` メソッドで LLM とやり取りする。

**対応プロバイダー**:

| プロバイダー | 実装クラス | 必要な認証情報 | デフォルトモデル |
|-------------|-----------|---------------|-----------------|
| `openai` | `OpenAIProvider` | `OPENAI_API_KEY` 環境変数 | `gpt-4o-mini` |
| `anthropic` | `AnthropicProvider` | `ANTHROPIC_API_KEY` 環境変数 | `claude-haiku-4-5-20251001` |
| `bedrock` | `BedrockProvider` | AWS 認証情報（IAM ロールまたは環境変数） | `global.anthropic.claude-haiku-4-5-20251001-v1:0` |

**LLM 設定の解決順序**:
1. CLI オプション（`--ai-model`, `--ai-region`）
2. 環境変数（`MD2MAP_AI_MODEL`, `AWS_REGION` 等）
3. プロバイダーごとのデフォルト値

**最大出力トークン数**: 800（固定）

### 6.2 LLM への入力

対象セクションの自身コンテンツ範囲のテキストに **1 始まりの相対行番号** を付与して LLM に送信する。行番号の形式は [add-line-numbers](https://github.com/elvezjp/add-line-numbers) に準拠する（`{行番号:4d}: {行内容}`、右揃え 4 桁 + コロン + スペース）。

行番号は常に 1〜N（N = コンテンツの行数）であり、元ファイルの行番号ではない。これにより AI は送信されたテキスト内での分割位置を明示的に返すことができる。レスポンスの相対行番号は、呼び出し元で元ファイルの行番号に変換される。

**システムプロンプトの構成**:

システムプロンプトは 4 パート構成の辞書 `DEFAULT_AI_PROMPT_PARTS` で定義される。`role`・`purpose`・`format` の 3 パートはレスポンスバリデーションや機能の根幹と密結合しているため外部変更不可。`notes` パートのみ `ai_prompt_extra_notes` による追記が可能。

| パートキー | 見出し | 内容 | 外部変更 |
|-----------|--------|------|----------|
| `role` | `# 役割` | 文書構造の分析に特化したアシスタント | 不可 |
| `purpose` | `# 目的` | 行番号付きテキストを、文書の構造や意味的なまとまりを保ちつつ話題や内容の切れ目で区切る | 不可 |
| `format` | `# 出力形式` | JSON 配列のみを返却。各要素は `start_line` (integer)、`end_line` (integer) のフィールドを持つ | 不可 |
| `notes` | `# 注意事項` | 行の連続性・網羅性・非重複の制約、ネスト構造保護、分割バランス | 追記可 |

**`notes` パートへの追記**:

`MarkdownParser` の `ai_prompt_extra_notes` 引数（`Optional[str]`）で指定したテキストが、デフォルトの注意事項末尾に改行区切りで追記される。CLI では `--ai-prompt-extra-notes` オプションで指定する。

```python
# 使用例
parser = MarkdownParser(
    split_mode="ai",
    llm_config=llm_config,
    ai_prompt_extra_notes="- Mermaid ブロックの途中では分割しないこと",
)
```

**ユーザーメッセージ**:
- 最大分割数の指示と総行数の制約（「以下のテキストを、意味的なまとまりを保ちつつ最大 N つに区切ってください。テキストは全 M 行です。最後の区間は行 M で終了してください。」）
- 1 始まりの行番号付きテキスト全文

### 6.3 LLM からの出力と検証

LLM のレスポンスを JSON としてパースし、以下の検証を行う。行番号は 1 始まりの相対番号として扱い、検証通過後に元ファイルの行番号に変換する。

**前処理**:
- レスポンスが ` ```json ... ``` ` で囲まれている場合、コードブロックを除去する

**フィールド検証**:
- `start_line`: 1 以上の整数であること
- `end_line`: `start_line` 以上かつ N（コンテンツの総行数）以下の整数であること

**構造検証**（すべて満たさない場合はフォールバック分割）:
- 最初のグループの `start_line` が 1 と一致すること
- 最後のグループの `end_line` が N（コンテンツの総行数）と一致すること
- 前のグループの `end_line + 1` が次のグループの `start_line` と一致すること（隙間なし・重複なし・順序通り）

**行番号の変換**:
- 検証通過後、各グループの相対行番号を元ファイルの行番号に変換する: `実際の行番号 = own_start + 相対行番号 - 1`

### 6.4 フォールバック

以下のいずれかに該当する場合、行数ベースの均等分割にフォールバックする：

- LLM の API 呼び出しが例外で失敗した場合
- レスポンスが JSON としてパースできない場合
- 構造検証に失敗した場合（隙間・重複・カバレッジ不足）

フォールバック時は NLP モードと同様の `<元セクション名>: part-N` 形式のタイトルが付与される。

### 6.5 サブスプリットの命名

NLP モードと同様に `<元セクション名>: part-N` 形式のタイトルを使用する。LLM にはタイトル生成を求めず、分割位置の決定に集中させる。

---

## 7. 制約とヒューリスティック

### 7.1 分割文書の内容保持

- 分割された文書片は元ファイルの該当範囲をそのまま保持する
- リンク（内部アンカー `[text](#heading)`、相対パス `[text](./other.md)` 等）は補正せず元のまま出力する
- リンク先の解決が必要な場合は MAP.json のセクション情報を参照する
- ファイルヘッダに「分割片」である旨を明記する

### 7.2 キーワード抽出の限界

**keywords** はヒューリスティックによる推定であり、以下の限界がある：

- 太字テキストを自動的にキーワードとして抽出
- 見出しテキストをキーワードとして扱う
- 文脈を理解した重要語抽出は行わない

### 7.3 要約生成の限界

**summary** は以下の方法で生成：

- 見出し直後の最初の段落を抽出
- 100 文字を超える場合は切り詰め
- AI による要約生成は行わない（静的解析のみ）

### 7.4 見出しレベルのスキップ

マークダウンでは見出しレベルが飛ぶことがある（H1 の次に H3 など）。

**対応方針**:
- 警告を出力するが、処理は継続する
- 階層パスは実際の見出しレベルに基づいて構築

---

## 8. エラーハンドリング

### 8.1 パースエラー時の動作

**方針**: 可能な限り部分的な出力を生成する

| 状況 | 動作 |
|------|------|
| 見出しが検出されない | 警告を出力し、文書全体を 1 セクションとして扱う |
| 不正なマークダウン構文 | 警告を記録し、抽出済みセクションで出力生成を試行 |

**警告の記録先**:
- INDEX.md：`[WARNING]` コメントとして記載
- 標準エラー出力：`--verbose` 時に詳細を出力
- MAP.json：警告情報は含めない（スキーマ固定を優先）

### 8.2 ファイル I/O エラー

| エラー種別 | 動作 |
|-----------|------|
| 入力ファイル不存在 | エラーメッセージ出力、終了コード 1 |
| 出力ディレクトリ書き込み不可 | エラーメッセージ出力、終了コード 1 |
| エンコーディングエラー | 警告出力、置換文字（U+FFFD）で継続処理 |

### 8.3 エンコーディング処理

- 入力ファイルは UTF-8 を前提とする
- 非 UTF-8 文字は置換文字（`\ufffd`）に変換して処理を継続
- 置換が発生した場合は警告を出力

---

## 9. 非機能要件

### 9.1 パフォーマンス

- 数千行のファイルを数秒以内で処理可能であること
- メモリ効率を考慮し、必要に応じてストリーム処理を採用

### 9.2 拡張性

- 将来的に他のマークアップ言語（reStructuredText、AsciiDoc 等）対応を視野に入れた設計とする
- パーサーは共通インターフェース（基底クラス）を継承する

### 9.3 動作環境

| 項目 | 要件 |
|------|------|
| Python バージョン | 3.9 以上 |
| 外部依存 | `markdown-it-py`（マークダウンパース用、任意） |
| OS | クロスプラットフォーム（Windows / macOS / Linux） |

---

## 10. 将来拡張

以下の機能は MVP 以降のフェーズで対応を検討する。

### 10.1 短期拡張（次期バージョン候補）

| 機能 | 概要 | 優先度 |
|------|------|--------|
| 複数ファイル対応 | ディレクトリ単位での一括解析、プロジェクト全体の索引生成 | 高 |
| 設定ファイル | 分割粒度、キーワード抽出パターンのカスタマイズ（`.md2maprc` 等） | 高 |
| 差分解析 | 前回出力との比較、変更箇所の検出、変更影響度の可視化 | 中 |

### 10.2 中期拡張

| 機能 | 概要 | 備考 |
|------|------|------|
| 他マークアップ言語追加 | reStructuredText、AsciiDoc、Org-mode | 需要に応じて優先順位を決定 |
| クロスリファレンス解析 | 文書間の参照関係の検出・可視化 | 複数ファイル対応後 |
| INDEX.md 品質向上 | セクション関係のグラフ化（Mermaid 等）、目次の自動生成 | 可視化の改善 |

### 10.3 長期拡張

| 機能 | 概要 | 備考 |
|------|------|------|
| AI 要約統合 | セクション要約の AI 生成オプション | API 連携が必要 |
| CI/CD 統合 | GitHub Actions での自動生成、PR ごとに索引生成・差分コメント | ワークフローテンプレートの提供 |
| Web UI | ブラウザ上での INDEX.md インタラクティブ閲覧 | 別リポジトリでの開発を検討 |
| IDE プラグイン | VSCode 等での統合、セクションジャンプ機能 | 別リポジトリでの開発を検討 |

### 10.4 拡張時の設計方針

- **後方互換性**: 出力フォーマット（INDEX.md、MAP.json）のスキーマ変更は慎重に行い、既存ツール連携を壊さない
- **モジュール性**: 新パーサーは独立したモジュールとして追加可能な設計を維持
- **オプトイン**: 新機能は既存の動作を変更せず、オプションで有効化する形式を優先

---

## 11. 出力例

### 11.1 入力例

```markdown
# プロジェクト概要

このプロジェクトは...

## 背景

**重要**: 本プロジェクトの背景として...

## 機能仕様

### 入力仕様

入力は以下の形式...

### 出力仕様

出力は以下の形式...

## 今後の計画

将来的には...
```

### 11.2 INDEX.md 出力例

```markdown
# Index: project.md

## 構造ツリー

- [MD1] プロジェクト概要 (L1–L4) → [parts/プロジェクト概要.md](parts/プロジェクト概要.md)
  - [MD2] 背景 (L6–L9) → [parts/プロジェクト概要_背景.md](parts/プロジェクト概要_背景.md)
  - [MD3] 機能仕様 (L11–L19) → [parts/プロジェクト概要_機能仕様.md](parts/プロジェクト概要_機能仕様.md)
    - [MD4] 入力仕様 (L13–L15) → [parts/プロジェクト概要_機能仕様_入力仕様.md](parts/プロジェクト概要_機能仕様_入力仕様.md)
    - [MD5] 出力仕様 (L17–L19) → [parts/プロジェクト概要_機能仕様_出力仕様.md](parts/プロジェクト概要_機能仕様_出力仕様.md)
  - [MD6] 今後の計画 (L21–L23) → [parts/プロジェクト概要_今後の計画.md](parts/プロジェクト概要_今後の計画.md)

## セクション詳細

### [MD1] プロジェクト概要 (H1)
- lines: L1–L4
- summary: このプロジェクトは...

### [MD2] 背景 (H2)
- lines: L6–L9
- summary: 本プロジェクトの背景として...
- keywords: 重要
```

### 11.3 MAP.json 出力例

```json
[
  {
    "id": "MD1",
    "section": "プロジェクト概要",
    "level": 1,
    "path": "プロジェクト概要",
    "original_file": "project.md",
    "original_start_line": 1,
    "original_end_line": 4,
    "word_count": 50,
    "part_file": "parts/プロジェクト概要.md",
    "checksum": "a1b2c3d4..."
  },
  {
    "id": "MD2",
    "section": "背景",
    "level": 2,
    "path": "プロジェクト概要 > 背景",
    "original_file": "project.md",
    "original_start_line": 6,
    "original_end_line": 9,
    "word_count": 30,
    "part_file": "parts/プロジェクト概要_背景.md",
    "checksum": "e5f6g7h8..."
  }
]
```

### 11.4 parts/ ファイル出力例

**parts/プロジェクト概要_背景.md**:

```markdown
<!--
md2map fragment
id: MD2
original: project.md
lines: 6-9
section: 背景
level: 2
-->

## 背景

**重要**: 本プロジェクトの背景として...
```
